21.Players Teaching Players is now more beneficial for both.  Also, (internally), Teach is now StdMOB managed, as it should be.
22.Potions/Pills/Scrolls/Powders now support parameters for spells on them.
23.Scriptable: get_prog now applies to getting items from containers on the ground.
24.Druids can now shapeshift into lower versions of their existing shapeshift forms.
25.Char Creation Stat picker now has Random Roll option.
26.POSE can now be turned off with NOPOSE
27.The POLL system now supports 1 vote per account for those using the account system.
28.Prop_TrashCan supports a DELAY parameter
29.New formulas for PVP combat -- INI/Control Panel support.  The defaults basically remove level fudging.
30.(Internal) New experiments in Fully Async sessions continues apace.  Converted Logout and Quit.
31.New prayer: Retribution (neutral Blade Barrier for Missionaries & Shaman)
32.POUR command can now be used to activate a potion on an item (for example, enchant weapon potion) (like thrown powders)
33.About two dozen thief skills have been finished and assigned to various classes. Skill_EscapeBonds renamed to Struggle Bonds.
34.Potions and Pills are more scaled to their levels.
35.Normally mobile mobs will walk by hidden/invis exits now (unless they can see hidden, etc..)
36.Death room (DEATH) coffeemud.ini entry now supports MORGUE to keep players where they died.
37.(Internal) Expertises have been optimized such that players only store the highest version.  Functionally identical, but with new editor expression.
38.Clans and Governments now support categories, scripts, and visibility flags, and mobs may belong to more than one, if setup properly. 
39.New INI entries: MAXCLANCATS and PUBLICCLANCATS for controlling player access to clan gvts by category
40.Player passwords can now be optionally hashed into the DB -- see HASHPASSWORDS in coffeemud.ini
41.If you've been having MXP problems with ZMUD/CMUD or Siplet, those problems are over.