@@ -4024,8 +4024,8 @@ value may be any numeric, string, or literal.</p>
       <p>This checks the rank of
 the character in their prominent rivalrous clan. Where
 '==' may be another logical operator from above. Valid values include:
-APPLICANT=0, MEMBER=1, STAFF=2, ENCHANTER=4, TREASURER=8, LEADER=16,
-BOSS=32</p>
+APPLICANT=0, MEMBER=1, STAFF=2, ENCHANTER=3, TREASURER=4, LEADER=5,
+BOSS=6</p>
       <p>EXAMPLE:</p>
       <pre>if clanrank($n == 0)<br /> mpecho The actor triggering me appears to be an APPLICANT.<br />else<br /> mpecho The actor triggering me appears not to be an APPLICANT.<br />endif<br /></pre>
       <h3><a name="clanqualifies">clanqualifies</a></h3>
